# app/rack_app.rb
@@ -1,6 +1,9 @@
 require_relative "controllers/base_controller.rb"
+require_relative "controllers/authentication_controller.rb"
 require_relative "controllers/products_controller.rb"
 require_relative "models/product.rb"
+require_relative "models/user.rb"
+require_relative "utils/json_web_token.rb"
 
 class RackApp
   def call(env)
@@ -10,6 +13,8 @@ class RackApp
     case [request.request_method, request.path_info]
     when ["GET", "/"]
       BaseController.new(request, response).root
+    when ["POST", "/login"]
+      AuthenticationController.new(request, response).login
     when ["GET", "/products"]
       ProductsController.new(request, response).index
     when ["POST", "/products"]
